# easytier-mac

./: .gitignore  .gitmodules  CLAUDE.md  CONTEXT.md  Cargo.toml  DESIGN.md  README.md
app/: .gitignore  project.yml
app/Sources/: AppModel.swift  BridgeClient.swift  BridgeModels.swift  BridgingHeader.h  ConfigStore.swift  EasyTierApp.swift  Formatters.swift  MenuBarIcon.swift  NetworkView.swift  PanelSettingsView.swift  PanelView.swift  RootView.swift  SettingsView.swift  WindowManager.swift
bridge/: Cargo.toml
bridge/include/: easytier_bridge.h
bridge/src/: conflict.rs  ffi.rs  install.rs  lib.rs  proto.rs  rpc.rs  supervisor_client.rs
bridge/tests/: dev_supervisor.rs
docs/adr/: 0001-native-swiftui-gui-with-rust-bridge.md  0002-single-user-owned-readonly-config.md  0003-standalone-repo-with-vendored-fork-submodule.md
gui/: index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
gui/src/: App.vue  api.ts  format.ts  main.ts  router.ts  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: install.rs  lib.rs  main.rs  profiles.rs  rpc.rs  supervisor_client.rs
gui/src-tauri/tests/: supervisor_client.rs
gui/src/pages/: Install.vue  Networks.vue  ProfileEdit.vue  Settings.vue  Status.vue
scripts/: app-install.sh  build-core.sh  fetch-official-core.sh  gui-install-example.sh  install.sh  m0a-signal-residue.sh  m0b-daemon-smoke.sh  m0c-orphan.sh  uninstall.sh
scripts/hooks-examples/: down.sh  up.sh
supervisor/: Cargo.toml
supervisor/src/: activation.rs  auth.rs  config.rs  core_proc.rs  hooks.rs  janitor.rs  main.rs  proto.rs  server.rs
supervisor/tests/: integration.rs
