[package]
name = "easytier-mac-bridge"
version = "0.1.0"
description = "EasyTier macOS native GUI bridge (M2): supervisor driver + RPC + config validation exposed over a C ABI"
authors = ["EasyTier"]
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"

[lib]
name = "easytier_mac_bridge"
# staticlib/cdylib are the Swift-facing artifacts (the C ABI); rlib is added so the
# integration test in tests/ can link the crate's Rust API (same as gui/src-tauri).
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2.5"

# RPC client + config parsing reuse the easytier crate public API only.
easytier = { path = "../vendor/EasyTier/easytier" }
# 校验错误诊断:语法错误时重新解析拿行列号(与 easytier 同版本,共享编译产物)。
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
