[package]
name = "easytier-mac-gui"
version = "0.1.0"
description = "EasyTier macOS menu-bar GUI (M1)"
authors = ["EasyTier"]
edition.workspace = true
rust-version.workspace = true

[lib]
name = "easytier_mac_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.7.0", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-autostart = "2.3.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2.5"

# RPC client + config parsing reuse the easytier crate public API only.
easytier = { path = "../../../easytier" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[features]
# Required for production bundles / when no dev server is used.
custom-protocol = ["tauri/custom-protocol"]
